fix sizing and spacing in ticket section

--- a/style.css
+++ b/style.css
@@ -132,20 +132,21 @@ nav li {
 
 .tickets {
     background: #080808;
-    padding: 200px 0;
 }
 .tickets img {
     display: block;
     float: left;
-    width: 20%;
+    width: 25%;
+    height: 25%;
+    object-fit: cover;
 }
 
 .tickets .section-text {
-    margin-left: 100px;
     float: left;
-    width: calc(80% - 100px);
+    width: 75%;
+    height: 25%;
+    padding: 0 0 0 50px;
 }
-
 
 /* instagram */
 .instagram h2 {
